Added extractors for different models

--- a/config.ini
+++ b/config.ini
@@ -1,3 +1,13 @@
 [extractor]
 output_stack_size = 8192
 model_output_folder = extracted/models
+default_extractor_class = HuggingFacePipelineExtractor
+extractor_registry = {
+    "Fashion-Mnist-SigLIP2": "SiglipExtractor",
+    "Mnist-Digits-SigLIP2": "SiglipExtractor",
+    "resnet34_svhn": "DetectorBasedExtractor",
+    "densenet121_svhn": "DetectorBasedExtractor",
+    "vgg16_bn_svhn": "DetectorBasedExtractor",
+    "resnet34_cifar100": "DetectorBasedExtractor",
+    "resnet18_cifar100": "DetectorBasedExtractor",
+    }
