--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [extractor]
 output_stack_size = 8192
-model_output_folder = extracted/models
+model_output_folder = artifacts/extracted/models
 default_extractor_class = HuggingFacePipelineExtractor
 extractor_registry = {
     "Fashion-Mnist-SigLIP2": "SiglipExtractor",
@@ -11,3 +11,18 @@ extractor_registry = {
     "resnet34_cifar100": "DetectorBasedExtractor",
     "resnet18_cifar100": "DetectorBasedExtractor",
     }
+
+[autoencoder]
+; A single linear layer is often enough for very small datasets; add more depth for complex parameter spaces.
+encoder_input_size = 8192
+encoder_output_size = 256
+decoder_output_size = 8192
+encoder_hidden_layers = [1024]
+decoder_hidden_layers = [1024]
+use_activation = true
+batch_size = 16
+num_epochs = 20
+learning_rate = 0.001
+shuffle = true
+extracted_models_dir = artifacts/extracted/models
+model_save_directory = artifacts/models/model_autoencoder
