Cleaned up training config and model delcartion

--- a/config.ini
+++ b/config.ini
@@ -20,6 +20,8 @@ decoder_output_size = 8192
 encoder_hidden_layers = [1024]
 decoder_hidden_layers = [1024]
 use_activation = true
+
+[train_model_autoencoder]
 batch_size = 16
 num_epochs = 20
 learning_rate = 0.001
