Added nicer progressbar

--- a/config.ini
+++ b/config.ini
@@ -23,8 +23,10 @@ use_activation = true
 
 [train_model_autoencoder]
 batch_size = 16
-num_epochs = 20
+num_epochs = 100
 learning_rate = 0.001
 shuffle = true
+log_every_n_epochs = 10
 extracted_models_dir = artifacts/extracted/models
 model_save_directory = artifacts/models/model_autoencoder
+progress_description = ModelAutoEncoder
