--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-torch==2.8.0
-numpy==2.2.6
-scikit-learn==1.7.2
-keras==3.12.0
-transformers==4.57.0
-beautilog==0.2.2
-detectors==0.1.11
-tqdm==4.67.1
+torch==2.6.0
+numpy
+scikit-learn==
+keras
+transformers
+beautilog
+detectors
+tqdm
