--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [extractor]
 output_stack_size = 8192
-model_output_folder = artifacts/extracted/models
+model_output_folder = /scratch/gilbreth/patil185/artifacts/extracted/models
 default_extractor_class = HuggingFacePipelineExtractor
 extractor_registry = {
     "Fashion-Mnist-SigLIP2": "SiglipExtractor",
@@ -17,16 +17,16 @@ extractor_registry = {
 encoder_input_size = 8192
 encoder_output_size = 256
 decoder_output_size = 8192
-encoder_hidden_layers = [1024]
-decoder_hidden_layers = [1024]
+encoder_hidden_layers = [1024, 512]
+decoder_hidden_layers = [1024, 512]
 use_activation = true
 
 [train_model_autoencoder]
 batch_size = 16
-num_epochs = 100
+num_epochs = 10000
 learning_rate = 0.001
 shuffle = true
 log_every_n_epochs = 10
-extracted_models_dir = artifacts/extracted/models
-model_save_directory = artifacts/models/model_autoencoder
+extracted_models_dir = /scratch/gilbreth/patil185/artifacts/extracted/models
+model_save_directory = /scratch/gilbreth/patil185/artifacts/models/model_autoencoder
 progress_description = ModelAutoEncoder
