--- a/config.ini
+++ b/config.ini
@@ -20,6 +20,7 @@ decoder_output_size = 8192
 encoder_hidden_layers = [1024, 512]
 decoder_hidden_layers = [1024, 512]
 use_activation = true
+dropout = 0.25
 
 [train_model_autoencoder]
 batch_size = 16
