Added suggestion to improve training

--- a/config.ini
+++ b/config.ini
@@ -20,14 +20,28 @@ decoder_output_size = 8192
 encoder_hidden_layers = [1024, 512]
 decoder_hidden_layers = [1024, 512]
 use_activation = true
-dropout = 0.25
+dropout = 0.05
+activation = gelu
 
 [train_model_autoencoder]
-batch_size = 16
-num_epochs = 10000
+batch_size = 128
+num_epochs = 500
 learning_rate = 0.001
 shuffle = true
-log_every_n_epochs = 10
+log_every_n_epochs = 5
 extracted_models_dir = /scratch/gilbreth/patil185/artifacts/extracted/models
 model_save_directory = /scratch/gilbreth/patil185/artifacts/models/model_autoencoder
 progress_description = ModelAutoEncoder
+weight_decay = 0.0001
+beta1 = 0.9
+beta2 = 0.999
+gradient_clip_norm = 1.0
+early_stopping_patience = 25
+early_stopping_min_delta = 0.0001
+scheduler_factor = 0.5
+scheduler_patience = 15
+scheduler_min_lr = 0.00001
+normalize_inputs = true
+code_l1_penalty = 0.001
+reconstruction_loss = smooth_l1
+smooth_l1_beta = 0.5
