Added Gaustschi setting

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [extractor]
 output_stack_size = 8192
-model_output_folder = /scratch/gilbreth/patil185/artifacts/extracted/models
+model_output_folder = /scratch/gautschi/patil185/artifacts/extracted/models
 default_extractor_class = HuggingFacePipelineExtractor
 extractor_registry = {
     "Fashion-Mnist-SigLIP2": "SiglipExtractor",
@@ -17,20 +17,20 @@ extractor_registry = {
 encoder_input_size = 8192
 encoder_output_size = 256
 decoder_output_size = 8192
-encoder_hidden_layers = [1024, 512]
-decoder_hidden_layers = [1024, 512]
+encoder_hidden_layers = [1024]
+decoder_hidden_layers = [1024]
 use_activation = true
 dropout = 0.05
 activation = gelu
 
 [train_model_autoencoder]
 batch_size = 128
-num_epochs = 500
+num_epochs = 3000
 learning_rate = 0.001
 shuffle = true
 log_every_n_epochs = 5
-extracted_models_dir = /scratch/gilbreth/patil185/artifacts/extracted/models
-model_save_directory = /scratch/gilbreth/patil185/artifacts/models/model_autoencoder
+extracted_models_dir = /scratch/gautschi/patil185/artifacts/extracted/models
+model_save_directory = /scratch/gautschi/patil185/artifacts/models/model_autoencoder
 progress_description = ModelAutoEncoder
 weight_decay = 0.0001
 beta1 = 0.9
