Added Dataloader for Imagenet Dataset

--- a/config.ini
+++ b/config.ini
@@ -45,3 +45,17 @@ normalize_inputs = true
 code_l1_penalty = 0.001
 reconstruction_loss = smooth_l1
 smooth_l1_beta = 0.5
+
+[imagenet_dataset]
+dataset_name = ILSVRC/imagenet-1k
+split = train
+cache_dir = artifacts/data/imagenet
+image_size = 224
+resize_shorter_side = 256
+drop_last = true
+shuffle = true
+seed = 42
+num_workers = 4
+pin_memory = true
+persistent_workers = true
+prefetch_factor = 2
