Added Imagnet Clip encoding script

--- a/config.ini
+++ b/config.ini
@@ -59,3 +59,12 @@ num_workers = 4
 pin_memory = true
 persistent_workers = true
 prefetch_factor = 2
+
+[clip_evaluation]
+model_name = openai/clip-vit-base-patch32
+dataset_split = validation
+device = cuda
+precision = fp16
+normalize_features = true
+num_batches = 1
+output_directory = /scratch/gilbreth/patil185/artifacts/extracted/imagenet_clip
