Added val and test

--- a/config.ini
+++ b/config.ini
@@ -68,3 +68,5 @@ precision = fp16
 normalize_features = true
 num_batches = 1
 output_directory = /scratch/gilbreth/patil185/artifacts/extracted/imagenet_clip
+split_sample_counts = {"train": 131072, "validation": 8192, "test": 65536}
+samples_per_shard = 8192
