Added better parralael and correct data structe

--- a/config.ini
+++ b/config.ini
@@ -49,7 +49,7 @@ smooth_l1_beta = 0.5
 [imagenet_dataset]
 dataset_name = ILSVRC/imagenet-1k
 split = train
-cache_dir = artifacts/data/imagenet
+cache_dir = /scratch/gautschi/patil185/artifacts/data/imagenet
 image_size = 224
 resize_shorter_side = 256
 drop_last = true
@@ -67,6 +67,7 @@ device = cuda
 precision = fp16
 normalize_features = true
 num_batches = 1
-output_directory = /scratch/gilbreth/patil185/artifacts/extracted/imagenet_clip
+output_directory = /scratch/gautschi/patil185/artifacts/extracted/imagenet_clip
 split_sample_counts = {"train": 131072, "validation": 8192, "test": 65536}
-samples_per_shard = 8192
+batches_per_shard = 512
+pad_to_full_shard = true
