--- a/config.ini
+++ b/config.ini
@@ -46,28 +46,46 @@ code_l1_penalty = 0.001
 reconstruction_loss = smooth_l1
 smooth_l1_beta = 0.5
 
-[imagenet_dataset]
-dataset_name = ILSVRC/imagenet-1k
-split = train
-cache_dir = /scratch/gautschi/patil185/artifacts/data/imagenet
-image_size = 224
-resize_shorter_side = 256
-drop_last = true
-shuffle = true
+[dataset_defaults]
+cache_dir = /scratch/gautschi/patil185/artifacts/data
+split_ratios = [0.8, 0.1, 0.1]
 seed = 42
+drop_last = false
+shuffle = false
 num_workers = 4
 pin_memory = true
 persistent_workers = true
 prefetch_factor = 2
+image_column = image
+label_column = label
+balance_classes = true
 
 [clip_evaluation]
 model_name = openai/clip-vit-base-patch32
-dataset_split = validation
 device = cuda
 precision = fp16
 normalize_features = true
-num_batches = 1
-output_directory = /scratch/gautschi/patil185/artifacts/extracted/imagenet_clip
-split_sample_counts = {"train": 131072, "validation": 8192, "test": 65536}
-batches_per_shard = 512
+output_directory = /scratch/gilbreth/patil185/artifacts/extracted/datasets
+batches_per_shard = 8192
 pad_to_full_shard = true
+dataset_names = ["MNIST", "SVHN", "USPS Digits", "Fashion-MNIST", "Deepfashion Inshop", "Fashion Product", "ImageNet 1k", "CIFAR-10", "CIFAR-100", "Caltech-101", "HAM10000", "LIDC-IDRI", "BCW"]
+limit_batches_per_split = None
+extra_load_kwargs = {}
+
+[dataset_loader]
+default_loader_class = GenericBalancedDataLoader
+loader_registry = {
+    "MNIST": {"dataset_name": "ylecun/mnist"},
+    "SVHN": {"dataset_name": "ufldl-stanford/svhn"},
+    "USPS Digits": {"dataset_name": "Voxel51/USPS"},
+    "Fashion-MNIST": {"dataset_name": "zalando-datasets/fashion_mnist"},
+    "Deepfashion Inshop": {"dataset_name": "Marqo/deepfashion-inshop"},
+    "Fashion Product": {"dataset_name": "ashraq/fashion-product-images-small"},
+    "ImageNet 1k": {"dataset_name": "ILSVRC/imagenet-1k"},
+    "CIFAR-10": {"dataset_name": "uoft-cs/cifar10"},
+    "CIFAR-100": {"dataset_name": "uoft-cs/cifar100"},
+    "Caltech-101": {"dataset_name": "bitmind/caltech-101"},
+    "HAM10000": {"dataset_name": "Nagabu/HAM10000"},
+    "LIDC-IDRI": {"dataset_name": "jmanuelc87/lidc-idri-segmentation"},
+    "BCW": {"dataset_name": "scikit-learn/breast-cancer-wisconsin"}
+    }
