--- a/config.ini
+++ b/config.ini
@@ -59,16 +59,21 @@ prefetch_factor = 2
 image_column = image
 label_column = label
 balance_classes = true
+max_samples_train = 131072
+max_samples_validation = 8192
+max_samples_test = 65536
 
 [clip_evaluation]
 model_name = openai/clip-vit-base-patch32
 device = cuda
 precision = fp16
 normalize_features = true
-output_directory = /scratch/gilbreth/patil185/artifacts/extracted/datasets
-batches_per_shard = 8192
+output_directory = /scratch/gautschi/patil185/artifacts/extracted/datasets
+batches_per_shard = 16
+cache_directory_override = /scratch/gautschi/patil185/
 pad_to_full_shard = true
-dataset_names = ["MNIST", "SVHN", "USPS Digits", "Fashion-MNIST", "Deepfashion Inshop", "Fashion Product", "ImageNet 1k", "CIFAR-10", "CIFAR-100", "Caltech-101", "HAM10000", "LIDC-IDRI", "BCW"]
+; dataset_names = ["MNIST", "SVHN", "USPS Digits", "Fashion-MNIST", "Deepfashion Inshop", "Fashion Product", "ImageNet 1k", "CIFAR-10", "CIFAR-100", "Caltech-101", "HAM10000", "LIDC-IDRI", "BCW"]
+dataset_names = ["USPS Digits"]
 limit_batches_per_split = None
 extra_load_kwargs = {}
 
@@ -76,15 +81,19 @@ extra_load_kwargs = {}
 default_loader_class = GenericBalancedDataLoader
 loader_registry = {
     "MNIST": {"dataset_name": "ylecun/mnist"},
-    "SVHN": {"dataset_name": "ufldl-stanford/svhn"},
+    "SVHN": {"dataset_name": "ufldl-stanford/svhn", "dataset_config": "cropped_digits"},
     "USPS Digits": {"dataset_name": "Voxel51/USPS"},
     "Fashion-MNIST": {"dataset_name": "zalando-datasets/fashion_mnist"},
-    "Deepfashion Inshop": {"dataset_name": "Marqo/deepfashion-inshop"},
-    "Fashion Product": {"dataset_name": "ashraq/fashion-product-images-small"},
+    "Deepfashion Inshop": {"dataset_name": "Marqo/deepfashion-inshop", "label_column": "category2"},
+    "Fashion Product": {"dataset_name": "ashraq/fashion-product-images-small", "label_column": "usage"},
     "ImageNet 1k": {"dataset_name": "ILSVRC/imagenet-1k"},
-    "CIFAR-10": {"dataset_name": "uoft-cs/cifar10"},
-    "CIFAR-100": {"dataset_name": "uoft-cs/cifar100"},
-    "Caltech-101": {"dataset_name": "bitmind/caltech-101"},
+    "CIFAR-10": {"dataset_name": "uoft-cs/cifar10", "image_column": "img", "label_column": "label"},
+    "CIFAR-100": {"dataset_name": "uoft-cs/cifar100", "image_column": "img", "label_column": "fine_label"},
+    "Caltech-101": {
+        "dataset_name": "bitmind/caltech-101",
+        "label_from_filename": {"source_column": "filename", "target_column": "label", "separator": "/", "index": 0, "strip_extension": True, "lowercase": True},
+        "label_column": "label"
+    },
     "HAM10000": {"dataset_name": "Nagabu/HAM10000"},
     "LIDC-IDRI": {"dataset_name": "jmanuelc87/lidc-idri-segmentation"},
     "BCW": {"dataset_name": "scikit-learn/breast-cancer-wisconsin"}
