Added code for model evalutions

--- a/config.ini
+++ b/config.ini
@@ -98,3 +98,15 @@ loader_registry = {
     "LIDC-IDRI": {"dataset_name": "jmanuelc87/lidc-idri-segmentation"},
     "BCW": {"dataset_name": "scikit-learn/breast-cancer-wisconsin"}
     }
+
+[autoencoder_evaluation]
+weights_path = artifacts/models/model_autoencoder/latest.pt
+parameter_root = artifacts/extracted/models
+output_directory = models/embeddings
+batch_size = 256
+device = cuda
+normalize_inputs = true
+flatten = true
+input_dtype = float32
+file_substring = model_extracted
+save_dtype = float32
