On-Prem changes

--- a/config.ini
+++ b/config.ini
@@ -100,13 +100,13 @@ loader_registry = {
     }
 
 [autoencoder_evaluation]
-weights_path = artifacts/models/model_autoencoder/latest.pt
-parameter_root = artifacts/extracted/models
-output_directory = models/embeddings
+weights_path = /scratch/gautschi/patil185/artifacts/models/model_autoencoder/autoencoder_weights.loss_0.008648.20251103_085137.pt
+parameter_root = /scratch/gautschi/patil185/artifacts/extracted/models
+output_directory = /scratch/gautschi/patil185/artifacts/extracted/model_embeddings
 batch_size = 256
 device = cuda
 normalize_inputs = true
 flatten = true
 input_dtype = float32
-file_substring = model_extracted
+file_substring = ""
 save_dtype = float32
