Added code for transformer model dataloader and training

--- a/config.ini
+++ b/config.ini
@@ -110,3 +110,46 @@ flatten = true
 input_dtype = float32
 file_substring = ""
 save_dtype = float32
+
+[model_embedding_loader]
+root_dir = /scratch/gautschi/patil185/artifacts/extracted/model_embeddings
+embedding_key = embedding
+batch_size = 16
+max_models = 30
+shuffle = true
+num_workers = 0
+pin_memory = true
+
+[dataset_token_loader]
+root_dir = /scratch/gautschi/patil185/artifacts/extracted/datasets
+dataset_names = None
+splits = ["train", "validation", "test"]
+shard_glob = "*.npz"
+batch_size = 1
+average_over_batches = false
+include_class_metadata = true
+num_workers = 0
+pin_memory = true
+
+[similarity_model]
+embedding_dim = 512
+hidden_dim = 768
+num_models = 30
+transformer_layers = 8
+transformer_heads = 8
+intermediate_dim = 2048
+dropout = 0.1
+attention_dropout = 0.1
+classifier_dropout = 0.1
+max_position_embeddings = 4096
+use_pretrained = false
+pretrained_model_name = None
+
+[train_similarity_transformer]
+batch_size = 8
+num_epochs = 1
+learning_rate = 0.0003
+weight_decay = 0.0001
+grad_clip = null
+shuffle = true
+log_every_n_epochs = 1
