Added final changes for transformer training

--- a/config.ini
+++ b/config.ini
@@ -152,3 +152,6 @@ weight_decay = 0.0001
 grad_clip = null
 shuffle = true
 log_every_n_epochs = 1
+ranking_loss_weight = 1.0
+logit_l2_weight = 0.0
+extra_loss_weight = 0.0
