Added working transformer

--- a/config.ini
+++ b/config.ini
@@ -115,7 +115,7 @@ save_dtype = float32
 root_dir = /scratch/gautschi/patil185/artifacts/extracted/model_embeddings
 embedding_key = embedding
 batch_size = 16
-max_models = 30
+max_models = 16
 shuffle = true
 num_workers = 0
 pin_memory = true
@@ -133,8 +133,8 @@ pin_memory = true
 [similarity_model]
 embedding_dim = 512
 hidden_dim = 768
-num_models = 30
-transformer_layers = 8
+num_models = 16
+transformer_layers = 16
 transformer_heads = 8
 intermediate_dim = 2048
 dropout = 0.1
@@ -149,7 +149,7 @@ batch_size = 16
 num_epochs = 1
 learning_rate = 0.0003
 weight_decay = 0.0001
-grad_clip = null
+gradient_clip_norm = None
 shuffle = true
 log_every_n_epochs = 1
 ranking_loss_weight = 1.0
