--- a/config.ini
+++ b/config.ini
@@ -133,25 +133,26 @@ pin_memory = true
 [similarity_model]
 embedding_dim = 512
 hidden_dim = 768
-num_models = 16
+num_models = 8
 transformer_layers = 16
 transformer_heads = 8
 intermediate_dim = 2048
-dropout = 0.1
-attention_dropout = 0.1
-classifier_dropout = 0.1
+dropout = 0.05
+attention_dropout = 0.05
+classifier_dropout = 0.05
 max_position_embeddings = 4096
 use_pretrained = false
 pretrained_model_name = None
 
 [train_similarity_transformer]
 batch_size = 16
-num_epochs = 1
+num_epochs = 150
 learning_rate = 0.0003
 weight_decay = 0.0001
-gradient_clip_norm = None
+gradient_clip_norm = 1.0
 shuffle = true
 log_every_n_epochs = 1
 ranking_loss_weight = 1.0
-logit_l2_weight = 0.0
+logit_l2_weight = 0.01
 extra_loss_weight = 0.0
+model_save_directory = /scratch/gautschi/patil185/artifacts/models/similarity_transformer
