--- a/config.ini
+++ b/config.ini
@@ -126,6 +126,7 @@ dataset_names = None
 splits = ["train", "validation", "test"]
 shard_glob = "*.npz"
 batch_size = 16
+shuffle = true
 include_class_metadata = true
 num_workers = 0
 pin_memory = true
@@ -133,7 +134,7 @@ pin_memory = true
 [similarity_model]
 embedding_dim = 512
 hidden_dim = 768
-num_models = 8
+num_models = 16
 transformer_layers = 16
 transformer_heads = 8
 intermediate_dim = 2048
@@ -143,16 +144,43 @@ classifier_dropout = 0.05
 max_position_embeddings = 4096
 use_pretrained = false
 pretrained_model_name = None
+temperature_init = 0.07
+temperature_min = 0.01
+temperature_max = 5.0
 
 [train_similarity_transformer]
 batch_size = 16
 num_epochs = 150
-learning_rate = 0.0003
+learning_rate = 0.001
 weight_decay = 0.0001
 gradient_clip_norm = 1.0
 shuffle = true
 log_every_n_epochs = 1
-ranking_loss_weight = 1.0
-logit_l2_weight = 0.01
+log_every_n_steps = 100
+early_stopping_patience = 20
+early_stopping_min_delta = 0.0001
+scheduler_factor = 0.5
+scheduler_patience = 10
+scheduler_min_lr = 0.00001
+scheduler_threshold = 0.0001
+scheduler_threshold_mode = rel
+scheduler_mode = min
+validation_splits = ["validation"]
+validation_interval_epochs = 1
+label_smoothing = 0.1
+temperature_init = 0.07
+temperature_min = 0.01
+temperature_max = 5.0
+hard_negative_top_k = 4
+hard_negative_margin = 0.05
+hard_negative_weight = 0.3
+overfit_subset_size = 64
+overfit_max_epochs = 50
+overfit_shuffle = true
+enable_overfit_check = true
+log_grad_stats = true
+log_activation_stats = true
+ranking_loss_weight = 0.1
+logit_l2_weight = 0.0001
 extra_loss_weight = 0.0
 model_save_directory = /scratch/gautschi/patil185/artifacts/models/similarity_transformer
