Added custom transformer version

--- a/config.ini
+++ b/config.ini
@@ -184,3 +184,36 @@ ranking_loss_weight = 0.1
 logit_l2_weight = 0.0001
 extra_loss_weight = 0.0
 model_save_directory = /scratch/gautschi/patil185/artifacts/models/similarity_transformer
+
+[custom_similarity_transformer]
+; Cross-attention based model selector for ranking models given dataset features
+; embed_dim: Embedding dimension for Q, K, V projections (must match input embeddings)
+; num_heads: Number of attention heads for multi-head attention
+; num_layers: Number of stacked cross-attention layers
+; dropout: Dropout rate applied in attention layers
+embed_dim = 512
+num_heads = 8
+num_layers = 2
+dropout = 0.1
+batch_first = true
+
+[custom_similarity_transformer_trainer]
+; Training configuration for CustomSimilarityTransformer model
+; Combines ranking loss and L2 regularization
+batch_size = 32
+num_epochs = 100
+learning_rate = 0.0001
+weight_decay = 0.001
+regularization_weight = 0.1
+shuffle = true
+gradient_clip_norm = 1.0
+early_stopping_patience = 10
+early_stopping_min_delta = 0.0001
+scheduler_factor = 0.5
+scheduler_patience = 5
+scheduler_min_lr = 0.000001
+validation_interval_epochs = 1
+log_every_n_epochs = 1
+progress_description = CustomSimilarityTransformer
+seed = 42
+model_save_directory = artifacts/models/custom_similarity_transformer
