Added a different implementation for trainer

--- a/config.ini
+++ b/config.ini
@@ -24,8 +24,10 @@ dropout = 0.05
 activation = gelu
 
 [train_model_autoencoder]
-batch_size = 128
-num_epochs = 3000
+batch_size = 16
+num_epochs = 3
+num_workers = 12
+device = cuda
 learning_rate = 0.001
 shuffle = true
 log_every_n_epochs = 5
@@ -70,7 +72,7 @@ precision = fp16
 normalize_features = true
 output_directory = /scratch/gautschi/patil185/artifacts/extracted/datasets
 batches_per_shard = 16
-cache_directory_override = /scratch/gautschi/patil185/
+cache_directory_override =
 pad_to_full_shard = true
 ; dataset_names = ["MNIST", "SVHN", "USPS Digits", "Fashion-MNIST", "Deepfashion Inshop", "Fashion Product", "ImageNet 1k", "CIFAR-10", "CIFAR-100", "Caltech-101", "HAM10000", "LIDC-IDRI", "BCW"]
 dataset_names = ["USPS Digits"]
@@ -216,4 +218,4 @@ validation_interval_epochs = 1
 log_every_n_epochs = 1
 progress_description = CustomSimilarityTransformer
 seed = 42
-model_save_directory = artifacts/models/custom_similarity_transformer
+model_save_directory = /scratch/gautschi/patil185/artifacts/models/custom_similarity_transformer
