--- a/beautilog.ini
+++ b/beautilog.ini
@@ -15,6 +15,10 @@ log_level = DEBUG
 
 [custom_levels]
 NOTIFICATION = 12
+EPOCH = 25
+VALIDATION = 26
+CHECKPOINT = 21
+BATCH = 15
 
 ; [redirected_loggers]
 ; numpy = DEBUG
@@ -25,4 +29,8 @@ ERROR = BRIGHT_RED
 WARNING = YELLOW
 INFO = CYAN
 NOTIFICATION = GREEN
+EPOCH = BRIGHT_YELLOW
+VALIDATION = BRIGHT_BLUE
+CHECKPOINT = BRIGHT_MAGENTA
+BATCH = BRIGHT_GREEN
 DEFAULT = RESET
