Added on prem changes to fixed val_loss and scheduler

--- a/config.ini
+++ b/config.ini
@@ -32,6 +32,7 @@ learning_rate = 0.001
 shuffle = true
 log_every_n_epochs = 5
 save_checkpoint_every_n_epochs = 100
+validate_every_n_epochs = 2
 extracted_models_dir = /scratch/gautschi/patil185/artifacts/extracted/models
 model_save_directory = /scratch/gautschi/patil185/artifacts/models/model_autoencoder
 progress_description = ModelAutoEncoder
@@ -42,7 +43,7 @@ gradient_clip_norm = 1.0
 early_stopping_patience = 200
 early_stopping_min_delta = 0.00001
 scheduler_factor = 0.5
-scheduler_patience = 15
+scheduler_patience = 10
 scheduler_min_lr = 0.00001
 normalize_inputs = true
 code_l1_penalty = 0.001
