Fixed the dataloader

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [extractor]
 output_stack_size = 8192
-model_output_folder = /scratch/gautschi/patil185/artifacts/extracted/models
+model_output_folder = artifacts/extracted/models
 default_extractor_class = HuggingFacePipelineExtractor
 extractor_registry = {
     "Fashion-Mnist-SigLIP2": "SiglipExtractor",
@@ -33,8 +33,8 @@ shuffle = true
 log_every_n_epochs = 5
 save_checkpoint_every_n_epochs = 100
 validate_every_n_epochs = 2
-extracted_models_dir = /scratch/gautschi/patil185/artifacts/extracted/models
-model_save_directory = /scratch/gautschi/patil185/artifacts/models/model_autoencoder
+extracted_models_dir = artifacts/extracted/models
+model_save_directory = artifacts/models/model_autoencoder
 progress_description = ModelAutoEncoder
 weight_decay = 0.0001
 beta1 = 0.9
@@ -51,7 +51,7 @@ reconstruction_loss = smooth_l1
 smooth_l1_beta = 0.5
 
 [dataset_defaults]
-cache_dir = /scratch/gautschi/patil185/artifacts/data
+cache_dir = artifacts/data
 split_ratios = [0.8, 0.1, 0.1]
 seed = 42
 drop_last = false
@@ -72,7 +72,7 @@ model_name = openai/clip-vit-base-patch32
 device = cuda
 precision = fp16
 normalize_features = true
-output_directory = /scratch/gautschi/patil185/artifacts/extracted/datasets
+output_directory = artifacts/extracted/datasets
 batches_per_shard = 16
 cache_directory_override =
 pad_to_full_shard = true
@@ -104,9 +104,9 @@ loader_registry = {
     }
 
 [autoencoder_evaluation]
-weights_path = /scratch/gautschi/patil185/artifacts/models/model_autoencoder/autoencoder_weights.loss_0.008648.20251103_085137.pt
-parameter_root = /scratch/gautschi/patil185/artifacts/extracted/models
-output_directory = /scratch/gautschi/patil185/artifacts/extracted/model_embeddings
+weights_path = artifacts/models/model_autoencoder/autoencoder_weights.loss_0.008648.20251103_085137.pt
+parameter_root = artifacts/extracted/models
+output_directory = artifacts/extracted/model_embeddings
 batch_size = 256
 device = cuda
 normalize_inputs = true
@@ -116,7 +116,7 @@ file_substring = ""
 save_dtype = float32
 
 [model_embedding_loader]
-root_dir = /scratch/gautschi/patil185/artifacts/extracted/model_embeddings
+root_dir = artifacts/extracted/model_embeddings
 embedding_key = embedding
 batch_size = 16
 max_models = 16
@@ -125,9 +125,8 @@ num_workers = 0
 pin_memory = true
 
 [dataset_token_loader]
-root_dir = /scratch/gautschi/patil185/artifacts/extracted/datasets
+root_dir = artifacts/extracted/datasets
 dataset_names = None
-splits = ["train", "validation", "test"]
 shard_glob = "*.npz"
 batch_size = 16
 shuffle = true
@@ -187,7 +186,7 @@ log_activation_stats = true
 ranking_loss_weight = 0.1
 logit_l2_weight = 0.0001
 extra_loss_weight = 0.0
-model_save_directory = /scratch/gautschi/patil185/artifacts/models/similarity_transformer
+model_save_directory = artifacts/models/similarity_transformer
 
 [custom_similarity_transformer]
 ; Cross-attention based model selector for ranking models given dataset features
@@ -220,4 +219,4 @@ validation_interval_epochs = 1
 log_every_n_epochs = 1
 progress_description = CustomSimilarityTransformer
 seed = 42
-model_save_directory = /scratch/gautschi/patil185/artifacts/models/custom_similarity_transformer
+model_save_directory = artifacts/models/custom_similarity_transformer
