added transformer trainer

--- a/config.ini
+++ b/config.ini
@@ -220,3 +220,35 @@ log_every_n_epochs = 1
 progress_description = CustomSimilarityTransformer
 seed = 42
 model_save_directory = artifacts/models/custom_similarity_transformer
+
+[transformer_trainer]
+; Cross-attention transformer for model-dataset ranking using torch.nn.Transformer
+; Model architecture parameters
+d_model = 512
+nhead = 8
+num_encoder_layers = 6
+num_decoder_layers = 6
+dim_feedforward = 2048
+dropout = 0.1
+num_models = 16
+; Training hyperparameters
+batch_size = 1
+num_epochs = 100
+num_workers = 4
+device = cuda
+learning_rate = 0.0001
+weight_decay = 0.001
+shuffle = true
+gradient_clip_norm = 1.0
+early_stopping_patience = 15
+early_stopping_min_delta = 0.0001
+scheduler_factor = 0.5
+scheduler_patience = 5
+scheduler_min_lr = 0.00001
+validate_every_n_epochs = 1
+log_every_n_epochs = 1
+save_checkpoint_every_n_epochs = 10
+ranking_loss_weight = 1.0
+smooth_l1_weight = 0.1
+model_save_directory = artifacts/models/transformer
+progress_description = TransformerTrainer
