--- a/beautilog.ini
+++ b/beautilog.ini
@@ -11,7 +11,7 @@ disabled_loggers = []
 log_file_path = beauti-run.log
 backup_count = 5
 max_bytes = 104857600
-log_level = DEBUG
+log_level = INFO
 
 [custom_levels]
 NOTIFICATION = 12
