--- a/config.ini
+++ b/config.ini
@@ -233,22 +233,25 @@ dropout = 0.1
 num_models = 16
 ; Training hyperparameters
 batch_size = 1
-num_epochs = 2
+num_epochs = 500
 num_workers = 64
 device = cuda
 learning_rate = 0.001
-weight_decay = 0.001
+weight_decay = 0.0001
 shuffle = true
-gradient_clip_norm = 1.0
-early_stopping_patience = 75
-early_stopping_min_delta = 0.0001
+gradient_clip_norm = 2.0
+early_stopping_patience = 10000
+early_stopping_min_delta = 0.00001
 scheduler_factor = 0.5
 scheduler_patience = 5
 scheduler_min_lr = 0.00001
 validate_every_n_epochs = 1
 log_every_n_epochs = 1
-save_checkpoint_every_n_epochs = 10
+save_checkpoint_every_n_epochs = 25
 ranking_loss_weight = 0.1
 smooth_l1_weight = 0.1
 model_save_directory = artifacts/models/transformer
 progress_description = TransformerTrainer
+load_from_checkpoint = true
+checkpoint_path = artifacts/models/transformer/checkpoint_CrossAttentionTransformer_epoch_75_20251112_162856.pt
+only_load_model_weights = false
