Corrected errors with best val and val los

--- a/config.ini
+++ b/config.ini
@@ -252,6 +252,6 @@ ranking_loss_weight = 0.1
 smooth_l1_weight = 0.1
 model_save_directory = artifacts/models/transformer
 progress_description = TransformerTrainer
-load_from_checkpoint = true
+load_from_checkpoint = false
 checkpoint_path = artifacts/models/transformer/checkpoint_CrossAttentionTransformer_epoch_75_20251112_162856.pt
 only_load_model_weights = false
