Seprated Model into a new file

--- a/config.ini
+++ b/config.ini
@@ -221,7 +221,7 @@ progress_description = CustomSimilarityTransformer
 seed = 42
 model_save_directory = artifacts/models/custom_similarity_transformer
 
-[transformer_trainer]
+[ranking_cross_attention_transformer]
 ; Cross-attention transformer for model-dataset ranking using torch.nn.Transformer
 ; Model architecture parameters
 d_model = 512
@@ -231,6 +231,8 @@ num_decoder_layers = 6
 dim_feedforward = 2048
 dropout = 0.1
 num_models = 16
+
+[transformer_trainer]
 ; Training hyperparameters
 batch_size = 1
 num_epochs = 500
