--- a/config.ini
+++ b/config.ini
@@ -257,3 +257,11 @@ progress_description = TransformerTrainer
 load_from_checkpoint = false
 checkpoint_path = artifacts/models/transformer/checkpoint_CrossAttentionTransformer_epoch_75_20251112_162856.pt
 only_load_model_weights = false
+
+[test_transformer]
+; Test configuration for TransformerTrainer evaluation on test set
+checkpoint_path = artifacts/models/transformer/checkpoint_CrossAttentionTransformer_epoch_75_20251112_162856.pt
+device = cuda
+batch_size = 1
+output_directory = artifacts/test_results
+output_filename = transformer_test_results.csv
