on-prem changes

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [extractor]
 output_stack_size = 8192
-model_output_folder = artifacts/extracted/models-test
+model_output_folder = artifacts/extracted/models
 default_extractor_class = HuggingFacePipelineExtractor
 extractor_registry = {
     "Fashion-Mnist-SigLIP2": "SiglipExtractor",
@@ -117,6 +117,7 @@ save_dtype = float32
 
 [model_embedding_loader]
 root_dir = artifacts/extracted/model_embeddings
+; root_dir = artifacts/extracted/model_test_embeddings
 embedding_key = embedding
 batch_size = 16
 max_models = 16
@@ -173,7 +174,8 @@ only_load_model_weights = false
 
 [test_transformer]
 ; Test configuration for TransformerTrainer evaluation on test set
-checkpoint_path = artifacts/models/transformer/CrossAttentionTransformer_best_20251112_162856.pt
+; checkpoint_path = artifacts/models/transformer/CrossAttentionTransformer_best_20251112_162856.pt
+checkpoint_path = artifacts/models/transformer/checkpoint_RankingCrossAttentionTransformer_epoch_50_20251117_083539.pt
 device = cuda
 output_directory = artifacts/test_results
-output_filename = transformer_blind_test_results.csv
+output_filename = transformer_test_results_epoch_50_20251117_083539.csv
