Added on-prem change

--- a/config.ini
+++ b/config.ini
@@ -25,15 +25,15 @@ activation = gelu
 
 [train_model_autoencoder]
 batch_size = 16
-num_epochs = 1500
+num_epochs = 300
 num_workers = 64
 device = cuda
 learning_rate = 0.001
 shuffle = true
 log_every_n_epochs = 5
-save_checkpoint_every_n_epochs = 100
-validate_every_n_epochs = 2
-extracted_models_dir = artifacts/extracted/models
+save_checkpoint_every_n_epochs = 50
+validate_every_n_epochs = 1
+extracted_models_dir = artifacts/extracted/models-faiss
 model_save_directory = artifacts/models/model_autoencoder
 progress_description = ModelAutoEncoder
 weight_decay = 0.0001
@@ -104,9 +104,9 @@ loader_registry = {
     }
 
 [autoencoder_evaluation]
-weights_path = artifacts/models/model_autoencoder/autoencoder_weights.loss_0.008648.20251103_085137.pt
-parameter_root = artifacts/extracted/models-test
-output_directory = artifacts/extracted/model_test_embeddings
+weights_path = artifacts/models/model_autoencoder/ModelAutoEncoder_best_20251124_113402.pt
+parameter_root = artifacts/extracted/models-faiss
+output_directory = artifacts/extracted/model_faiss_embeddings
 batch_size = 256
 device = cuda
 normalize_inputs = true
@@ -116,11 +116,12 @@ file_substring = ""
 save_dtype = float32
 
 [model_embedding_loader]
-root_dir = artifacts/extracted/model_embeddings
+root_dir = artifacts/extracted/model_faiss_embeddings
+; root_dir = artifacts/extracted/model_embeddings
 ; root_dir = artifacts/extracted/model_test_embeddings
 embedding_key = embedding
-batch_size = 16
-max_models = 16
+batch_size = 256
+max_models = 256
 shuffle = true
 num_workers = 0
 pin_memory = true
@@ -138,18 +139,25 @@ pin_memory = true
 [ranking_cross_attention_transformer]
 ; Cross-attention transformer for model-dataset ranking using torch.nn.Transformer
 ; Model architecture parameters
+; d_model = 512
+; nhead = 8
+; num_encoder_layers = 6
+; num_decoder_layers = 6
+; dim_feedforward = 2048
+; dropout = 0.1
+; num_models = 256
 d_model = 512
-nhead = 8
-num_encoder_layers = 6
-num_decoder_layers = 6
-dim_feedforward = 2048
+nhead = 16
+num_encoder_layers = 16
+num_decoder_layers = 16
+dim_feedforward = 4096
 dropout = 0.1
-num_models = 16
+num_models = 256
 
 [transformer_trainer]
 ; Training hyperparameters
 batch_size = 1
-num_epochs = 500
+num_epochs = 750
 num_workers = 64
 device = cuda
 learning_rate = 0.0001
@@ -166,7 +174,7 @@ log_every_n_epochs = 1
 save_checkpoint_every_n_epochs = 50
 ranking_loss_weight = 0.1
 smooth_l1_weight = 0.1
-model_save_directory = artifacts/models/transformer
+model_save_directory = artifacts/models/transformer-larger
 progress_description = TransformerTrainer
 load_from_checkpoint = false
 checkpoint_path = artifacts/models/transformer/checkpoint_CrossAttentionTransformer_epoch_75_20251112_162856.pt
