Added recent setting

--- a/config.ini
+++ b/config.ini
@@ -52,7 +52,7 @@ smooth_l1_beta = 0.5
 
 [dataset_defaults]
 cache_dir = artifacts/data
-split_ratios = [0.8, 0.1, 0.1]
+split_ratios = [0.01, 0.01, 0.98]
 seed = 42
 drop_last = false
 shuffle = false
@@ -74,10 +74,10 @@ precision = fp16
 normalize_features = true
 output_directory = artifacts/extracted/datasets
 batches_per_shard = 16
-cache_directory_override =
+cache_directory_override = /scratch/gautschi/patil185/
 pad_to_full_shard = true
 ; dataset_names = ["MNIST", "SVHN", "USPS Digits", "Fashion-MNIST", "Deepfashion Inshop", "Fashion Product", "ImageNet 1k", "CIFAR-10", "CIFAR-100", "Caltech-101", "HAM10000", "LIDC-IDRI", "BCW"]
-dataset_names = ["USPS Digits"]
+dataset_names = ["pokemon"]
 limit_batches_per_split = None
 extra_load_kwargs = {}
 
@@ -100,7 +100,8 @@ loader_registry = {
     },
     "HAM10000": {"dataset_name": "Nagabu/HAM10000"},
     "LIDC-IDRI": {"dataset_name": "jmanuelc87/lidc-idri-segmentation"},
-    "BCW": {"dataset_name": "scikit-learn/breast-cancer-wisconsin"}
+    "BCW": {"dataset_name": "scikit-learn/breast-cancer-wisconsin"},
+    "pokemon": {"dataset_name": "valhalla/pokemon-dataset", "label_column": "name"},
     }
 
 [autoencoder_evaluation]
