Added on-prem changes

--- a/config.ini
+++ b/config.ini
@@ -52,7 +52,7 @@ smooth_l1_beta = 0.5
 
 [dataset_defaults]
 cache_dir = artifacts/data
-split_ratios = [0.01, 0.01, 0.98]
+split_ratios = [0.8, 0.1, 0.1]
 seed = 42
 drop_last = false
 shuffle = false
@@ -77,7 +77,7 @@ batches_per_shard = 16
 cache_directory_override = /scratch/gautschi/patil185/
 pad_to_full_shard = true
 ; dataset_names = ["MNIST", "SVHN", "USPS Digits", "Fashion-MNIST", "Deepfashion Inshop", "Fashion Product", "ImageNet 1k", "CIFAR-10", "CIFAR-100", "Caltech-101", "HAM10000", "LIDC-IDRI", "BCW"]
-dataset_names = ["pokemon"]
+dataset_names = ["Aircraft"]
 limit_batches_per_split = None
 extra_load_kwargs = {}
 
@@ -102,6 +102,7 @@ loader_registry = {
     "LIDC-IDRI": {"dataset_name": "jmanuelc87/lidc-idri-segmentation"},
     "BCW": {"dataset_name": "scikit-learn/breast-cancer-wisconsin"},
     "pokemon": {"dataset_name": "valhalla/pokemon-dataset", "label_column": "name"},
+    "Aircraft": {"dataset_name": "dpdl-benchmark/fgvc_aircraft", "label_column": "manufacturer" },
     }
 
 [autoencoder_evaluation]
@@ -117,18 +118,18 @@ file_substring = ""
 save_dtype = float32
 
 [model_embedding_loader]
-root_dir = artifacts/extracted/model_faiss_embeddings
-; root_dir = artifacts/extracted/model_embeddings
+; root_dir = artifacts/extracted/model_faiss_embeddings
+root_dir = artifacts/extracted/model_embeddings
 ; root_dir = artifacts/extracted/model_test_embeddings
 embedding_key = embedding
-batch_size = 256
-max_models = 256
+batch_size = 16
+max_models = 16
 shuffle = true
 num_workers = 0
 pin_memory = true
 
 [dataset_token_loader]
-root_dir = artifacts/extracted/datasets
+root_dir = artifacts/extracted/datasets-test
 dataset_names = None
 shard_glob = "*.npz"
 batch_size = 16
@@ -140,20 +141,20 @@ pin_memory = true
 [ranking_cross_attention_transformer]
 ; Cross-attention transformer for model-dataset ranking using torch.nn.Transformer
 ; Model architecture parameters
-; d_model = 512
-; nhead = 8
-; num_encoder_layers = 6
-; num_decoder_layers = 6
-; dim_feedforward = 2048
-; dropout = 0.1
-; num_models = 256
 d_model = 512
-nhead = 16
-num_encoder_layers = 16
-num_decoder_layers = 16
-dim_feedforward = 4096
+nhead = 8
+num_encoder_layers = 6
+num_decoder_layers = 6
+dim_feedforward = 2048
 dropout = 0.1
 num_models = 256
+; d_model = 512
+; nhead = 16
+; num_encoder_layers = 16
+; num_decoder_layers = 16
+; dim_feedforward = 4096
+; dropout = 0.1
+; num_models = 256
 
 [transformer_trainer]
 ; Training hyperparameters
@@ -187,4 +188,4 @@ only_load_model_weights = false
 checkpoint_path = artifacts/models/transformer/checkpoint_RankingCrossAttentionTransformer_epoch_50_20251117_083539.pt
 device = cuda
 output_directory = artifacts/test_results
-output_filename = transformer_test_results_epoch_50_20251117_083539.csv
+output_filename = transformer_test_results_blind_dataset_epoch_50_20251117_083539_.csv
