Added config changes

--- a/config.ini
+++ b/config.ini
@@ -77,7 +77,7 @@ batches_per_shard = 16
 cache_directory_override = /scratch/gautschi/patil185/
 pad_to_full_shard = true
 ; dataset_names = ["MNIST", "SVHN", "USPS Digits", "Fashion-MNIST", "Deepfashion Inshop", "Fashion Product", "ImageNet 1k", "CIFAR-10", "CIFAR-100", "Caltech-101", "HAM10000", "LIDC-IDRI", "BCW"]
-dataset_names = ["Aircraft"]
+dataset_names = ["SUN397"]
 limit_batches_per_split = None
 extra_load_kwargs = {}
 
@@ -103,6 +103,7 @@ loader_registry = {
     "BCW": {"dataset_name": "scikit-learn/breast-cancer-wisconsin"},
     "pokemon": {"dataset_name": "valhalla/pokemon-dataset", "label_column": "name"},
     "Aircraft": {"dataset_name": "dpdl-benchmark/fgvc_aircraft", "label_column": "manufacturer" },
+    "SUN397": {"dataset_name": "tanganke/sun397", "label_column": "label"},
     }
 
 [autoencoder_evaluation]
@@ -184,8 +185,8 @@ only_load_model_weights = false
 
 [test_transformer]
 ; Test configuration for TransformerTrainer evaluation on test set
-; checkpoint_path = artifacts/models/transformer/CrossAttentionTransformer_best_20251112_162856.pt
-checkpoint_path = artifacts/models/transformer/checkpoint_RankingCrossAttentionTransformer_epoch_50_20251117_083539.pt
+checkpoint_path = artifacts/models/transformer/CrossAttentionTransformer_best_20251112_162856.pt
+; checkpoint_path = artifacts/models/transformer/checkpoint_RankingCrossAttentionTransformer_epoch_50_20251117_083539.pt
 device = cuda
 output_directory = artifacts/test_results
-output_filename = transformer_test_results_blind_dataset_epoch_50_20251117_083539_.csv
+output_filename = transformer_test_results_blind_dataset_epoch_75_20251112_162856.csv
