Added standofrd cars:

--- a/config.ini
+++ b/config.ini
@@ -104,6 +104,7 @@ loader_registry = {
     "pokemon": {"dataset_name": "valhalla/pokemon-dataset", "label_column": "name"},
     "Aircraft": {"dataset_name": "dpdl-benchmark/fgvc_aircraft", "label_column": "manufacturer" },
     "SUN397": {"dataset_name": "tanganke/sun397", "label_column": "label"},
+    "Cars": {"dataset_name": "tanganke/stanford_cars", "label_column": "label"},
     }
 
 [autoencoder_evaluation]
